[tool.poetry]
name = "spotify_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
requests = "^2.25.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
